--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ray of Hope</title>
     <link rel="icon" href="images/icon.png" type="image/png">
+    <!-----------------------Custom CSS---------------------------->
     <link rel="stylesheet" href="style.css">
+    <!------------------ aos css file cdn link  ------------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
+    <!-------------- magnific popup css cdn link  --------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!----------------Font awesome kit--------------------------->
+    <!-------------------Font awesome kit--------------------------->
     <script src="https://kit.fontawesome.com/d16d567c69.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-    <!-------------------- header section starts  ----------------->
+    <!-------------------- Header Section STARTS  ----------------->
 
     <header>
 
@@ -41,8 +48,95 @@
 
     </header>
 
-    <!----------------------- header section ends  ----------------->
+    <!----------------------- Header Section ENDS  ----------------->
+    <!---------------------- Home Section STARTS  ----------------->
 
+    <section class="home" id="home">
+
+        <div class="container">
+
+            <div class="row min-vh-100 align-items-center text-center text-md-left">
+
+                <div class="col-md-6 pr-md-5" data-aos="zoom-in">
+                    <img src="images/Good team-bro.png" width="100%" alt="">
+                </div>
+
+                <div class="col-md-6 pl-md-5 content" data-aos="fade-left">
+                    <h1><span>there</span> is always, <span>a hope</span> for you.</h1>
+                    <h3>we care for you.</h3>
+                    <a href="#"><button class="button">learn more</button></a>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!--------------------- Home Section ENDS ------------------>
+    <!------------------ About Section Starts  --------->
+
+    <section class="about" id="about">
+
+        <div class="container">
+
+            <div class="row min-vh-100 align-items-center">
+
+                <div class="col-md-6 content" data-aos="fade-right">
+
+                    <div class="box">
+                        <h3> <i class="fas fa-ambulance"></i> ambulance services </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
+                    </div>
+
+                    <div class="box">
+                        <h3> <i class="fas fa-procedures"></i> emergency rooms </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
+                    </div>
+
+                    <div class="box">
+                        <h3> <i class="fas fa-stethoscope"></i> free check-ups </h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
+                    </div>
+
+                </div>
+
+                <div class="col-md-6 d-none d-md-block" data-aos="fade-left">
+                    <img src="images/Helpful sign-pana.png" width="100%" alt="">
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!----------------------- About Section ENDS --------------------->
+
+
+
+    <!-- jquery cdn link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- magnific popup js link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+
+    <!-- aos js file cdn link  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
+    <!-- custom js link  -->
+    <script src="js/main.js"></script>
+
+
+    <script>
+
+        AOS.init({
+            duration: 1000,
+            delay: 400
+        });
+
+    </script>
 </body>
 
 </html>
