--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <nav class="nav">
                 <ul>
                     <li><a href="#home">home</a></li>
-                    <li><a href="#about">about</a></li>
-                    <li><a href="#facility">facility</a></li>
+                    <li><a href="#help">help</a></li>
+                    <li><a href="#concerns">concerns</a></li>
                     <li><a href="#review">review</a></li>
                     <li><a href="#contact">contact</a></li>
                     <li><a href="#post">post</a></li>
@@ -77,7 +77,7 @@
     <!--------------------- Home Section ENDS ------------------>
     <!------------------ About Section Starts  --------->
 
-    <section class="about" id="about">
+    <section class="about" id="help">
 
         <div class="container">
 
@@ -86,12 +86,12 @@
                 <div class="col-md-6 content" data-aos="fade-right">
 
                     <div class="box">
-                        <h3> <i class="fas fa-ambulance"></i> ambulance services </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
+                        <h3> <i class="fas fa-phone"></i> talk to us </h3>
+                        <p>we are here to listen. anything and everything you feel.</p>
                     </div>
 
                     <div class="box">
-                        <h3> <i class="fas fa-procedures"></i> emergency rooms </h3>
+                        <h3> <i class="fas fa-clock"></i> emergency rooms </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
                     </div>
 
@@ -113,7 +113,80 @@
     </section>
 
     <!----------------------- About Section ENDS --------------------->
+    <!--------------- Facility Section STARTS  ------------------->
 
+    <section class="facility" id="concerns">
+
+        <div class="container">
+
+            <h1 class="heading"> your concerns</h1>
+
+            <div class="box-container">
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Anxiety-bro.png" title="our team">
+                        <img src="images/Anxiety-bro.png" alt="">
+                    </a>
+                    <!-- <h2 class="text-center">Anxiety</h2>
+                    <p>you feel restless and not good</p>
+                    <img src="./images/Anxiety-bro.png" alt=""> -->
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Depression-amico.png" title="our lab">
+                        <img src="images/Depression-amico.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Post-traumatic stress disorder-amico.png" title="emergency rooms">
+                        <img src="images/Post-traumatic stress disorder-amico.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Schizophrenia-rafiki.png" title="expert doctors">
+                        <img src="images/Schizophrenia-rafiki.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Cabin fever-amico.png" title="expert doctors">
+                        <img src="images/Cabin fever-amico.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Feeling angry-rafiki.png" title="emergency rooms">
+                        <img src="images/Feeling angry-rafiki.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Personality disorder-amico.png" title="expert doctors">
+                        <img src="images/Personality disorder-amico.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/Eating disorder-bro.png" title="emergency rooms">
+                        <img src="images/Eating disorder-bro.png" alt="">
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+                    <a href="images/img9.jpg" title="enough beds">
+                        <img src="images/Questions-pana.png" alt="">
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!------------------- Facility Section ENDS -->
 
 
     <!-- jquery cdn link  -->
