--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
                     </div>
 
                     <div class="box">
-                        <h3> <i class="fas fa-clock"></i> emergency rooms </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
+                        <h3> <i class="fas fa-clock"></i> therapy </h3>
+                        <p>There are many different types of effective therapies. </p>
                     </div>
 
                     <div class="box">
-                        <h3> <i class="fas fa-stethoscope"></i> free check-ups </h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, suscipit.</p>
+                        <h3> <i class="fas fa-stethoscope"></i> counceling </h3>
+                        <p>Counseling psychology is a psychological specialty that encompasses research and applied work
+                            in several broad domains</p>
                     </div>
 
                 </div>
@@ -124,59 +125,66 @@
             <div class="box-container">
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Anxiety-bro.png" title="our team">
-                        <img src="images/Anxiety-bro.png" alt="">
+                    <!-- <a href="images/Anxiety-bro.png" title="our team"> -->
+                    <img src="images/Anxiety-bro.png" alt="">
+                    <h1 class="text-center">Anxiety</h1>
                     </a>
-                    <!-- <h2 class="text-center">Anxiety</h2>
-                    <p>you feel restless and not good</p>
-                    <img src="./images/Anxiety-bro.png" alt=""> -->
+
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Depression-amico.png" title="our lab">
-                        <img src="images/Depression-amico.png" alt="">
-                    </a>
-                </div>
 
-                <div class="box" data-aos="zoom-in">
-                    <a href="images/Post-traumatic stress disorder-amico.png" title="emergency rooms">
-                        <img src="images/Post-traumatic stress disorder-amico.png" alt="">
+                    <img src="images/Depression-amico.png" alt="">
+                    <h1 class="text-center">Depression</h1>
                     </a>
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Schizophrenia-rafiki.png" title="expert doctors">
-                        <img src="images/Schizophrenia-rafiki.png" alt="">
+
+                    <img src="images/Post-traumatic stress disorder-amico.png" alt="">
+                    <h1 class="text-center">PTSD</h1>
                     </a>
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Cabin fever-amico.png" title="expert doctors">
-                        <img src="images/Cabin fever-amico.png" alt="">
+
+                    <img src="images/Schizophrenia-rafiki.png" alt="">
+                    <h1 class="text-center">Schizophrenia</h1>
                     </a>
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Feeling angry-rafiki.png" title="emergency rooms">
-                        <img src="images/Feeling angry-rafiki.png" alt="">
+
+                    <img src="images/Cabin fever-amico.png" alt="">
+                    <h1 class="text-center">Cabin Fever</h1>
                     </a>
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Personality disorder-amico.png" title="expert doctors">
-                        <img src="images/Personality disorder-amico.png" alt="">
+
+                    <img src="images/Feeling angry-rafiki.png" alt="">
+                    <h1 class="text-center">Anger</h1>
                     </a>
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/Eating disorder-bro.png" title="emergency rooms">
-                        <img src="images/Eating disorder-bro.png" alt="">
+
+                    <img src="images/Personality disorder-amico.png" alt="">
+                    <h1 class="text-center">Personality Issues</h1>
                     </a>
                 </div>
 
                 <div class="box" data-aos="zoom-in">
-                    <a href="images/img9.jpg" title="enough beds">
-                        <img src="images/Questions-pana.png" alt="">
+
+                    <img src="images/Eating disorder-bro.png" alt="">
+                    <h1 class="text-center">Eating Disorder</h1>
+                    </a>
+                </div>
+
+                <div class="box" data-aos="zoom-in">
+
+                    <img src="images/Questions-pana.png" alt="">
+                    <h1 class="text-center">Indecesion</h1>
                     </a>
                 </div>
 
