--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
         <div class="container">
 
-            <a href="#" class="logo"><span>Ray</span>of<span>Hop</span>e</a>
+            <a href="#" class="logo">Ray of Hope</a>
 
             <nav class="nav">
                 <ul>
                     <li><a href="#home">home</a></li>
                     <li><a href="#help">help</a></li>
                     <li><a href="#concerns">concerns</a></li>
-                    <li><a href="#review">review</a></li>
+                    <li><a href="#experts">experts</a></li>
                     <li><a href="#contact">contact</a></li>
                     <li><a href="#post">post</a></li>
                 </ul>
@@ -114,9 +114,9 @@
     </section>
 
     <!----------------------- About Section ENDS --------------------->
-    <!--------------- Facility Section STARTS  ------------------->
+    <!--------------- concern Section STARTS  ------------------->
 
-    <section class="facility" id="concerns">
+    <section class="concern" id="concerns">
 
         <div class="container">
 
@@ -184,7 +184,8 @@
                 <div class="box" data-aos="zoom-in">
 
                     <img src="images/Questions-pana.png" alt="">
-                    <h1 class="text-center">Indecesion</h1>
+                    <h1 class="text-center">Indecisive
+                    </h1>
                     </a>
                 </div>
 
@@ -194,7 +195,49 @@
 
     </section>
 
-    <!------------------- Facility Section ENDS -->
+    <!------------------- concern Section ENDS ------->
+
+    <!------------ Experts Section STARTS  -------->
+
+    <section class="expert" id="experts">
+
+        <div class="container">
+
+            <h1 class="heading"> Experts View </h1>
+
+            <div class="box-container">
+
+                <div class="box" data-aos="fade-right">
+                    <p>Life doesn’t make any sense without interdependence. We need each other, and the sooner we learn
+                        that, the better for us all.</p>
+                    <h3>Dr. Jeny</h3>
+                    <span>april 5, 2020</span>
+                    <img src="images/Doctor-pana.png" alt="">
+                </div>
+
+                <div class="box" data-aos="fade-up">
+                    <p>Once you start making the effort to “wake yourself up” – that is, be more mindful of your daily
+                        activities – you suddenly start appreciating your life more.</p>
+                    <h3>Dr. Elsa</h3>
+                    <span>may 17, 2022</span>
+                    <img src="images/Online Doctor-amico.png" alt="">
+                </div>
+
+                <div class="box" data-aos="fade-left">
+                    <p>A failure is not a mistake, it may simply be the best one can do under the circumstances. The
+                        real mistake is to stop trying.</p>
+                    <h3>Dr. Islam</h3>
+                    <span>jan 18, 2022</span>
+                    <img src="images/Online Doctor-rafiki.png" alt="">
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!--------------------- Experts Section ENDS  ---------->
 
 
     <!-- jquery cdn link  -->
