--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!--------------------- Home Section ENDS ------------------>
     <!------------------ About Section Starts  --------->
 
-    <section class="about" id="help">
+    <section class="help" id="help">
 
         <div class="container">
 
@@ -113,8 +113,8 @@
 
     </section>
 
-    <!----------------------- About Section ENDS --------------------->
-    <!--------------- concern Section STARTS  ------------------->
+    <!----------------------- Help Section ENDS --------------------->
+    <!--------------- Concern Section STARTS  ------------------->
 
     <section class="concern" id="concerns">
 
@@ -195,7 +195,7 @@
 
     </section>
 
-    <!------------------- concern Section ENDS ------->
+    <!------------------- Concern Section ENDS ------->
 
     <!------------ Experts Section STARTS  -------->
 
@@ -208,7 +208,7 @@
             <div class="box-container">
 
                 <div class="box" data-aos="fade-right">
-                    <p>Life doesn’t make any sense without interdependence. We need each other, and the sooner we learn
+                    <p>Life doesn't make any sense without interdependence. We need each other, and the sooner we learn
                         that, the better for us all.</p>
                     <h3>Dr. Jeny</h3>
                     <span>april 5, 2020</span>
@@ -238,18 +238,61 @@
     </section>
 
     <!--------------------- Experts Section ENDS  ---------->
+    <!------------------ Facility Section STARTS ------------>
 
+    <section class="facility">
 
-    <!-- jquery cdn link  -->
+        <div class="container">
+
+            <div class="box-container">
+
+                <div class="box" data-aos="fade-up">
+                    <i class="fas fa-hospital"></i>
+                    <span>120+</span>
+                    <h3>Hospitals</h3>
+                </div>
+
+                <div class="box" data-aos="fade-up">
+                    <i class="fas fa-users"></i>
+                    <span>100+</span>
+                    <h3>staff</h3>
+                </div>
+
+                <div class="box" data-aos="fade-up">
+                    <i class="fas fa-smile"></i>
+                    <span>1200+</span>
+                    <h3>happy patients</h3>
+                </div>
+
+                <div class="box" data-aos="fade-up">
+                    <i class="fas fa-procedures"></i>
+                    <span>130+</span>
+                    <h3>bed facility</h3>
+                </div>
+                <div class="box" data-aos="fade-up">
+                    <i class="fas fa-clock"></i>
+                    <span>130+</span>
+                    <h3>bed facility</h3>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!---------------- Facility Section ENDS -------------->
+
+    <!-------------------- jquery cdn link  --------------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!-- magnific popup js link  -->
+    <!-------------- magnific popup js link  -------------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
-    <!-- aos js file cdn link  -->
+    <!------------------- aos js file cdn link  ------------>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 
-    <!-- custom js link  -->
+    <!-------------------- custom js link  ------------->
     <script src="js/main.js"></script>
 
 
