--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="#help">help</a></li>
                     <li><a href="#concerns">concerns</a></li>
                     <li><a href="#experts">experts</a></li>
-                    <li><a href="#contact">contact</a></li>
+                    <li><a href="#appointment">appointment</a></li>
                     <li><a href="#post">post</a></li>
                 </ul>
             </nav>
@@ -282,7 +282,51 @@
     </section>
 
     <!---------------- Facility Section ENDS -------------->
+    <!------------------- Appointment Section STARTS  -->
 
+    <section class="" id="appointment">
+
+        <div class="container min-vh-100">
+
+            <div class="row justify-content-center">
+
+                <h1 class="heading"><span>'</span> make an appointment <span>'</span></h1>
+
+                <div class="col-md-10" data-aos="flip-down">
+
+                    <form action="">
+
+                        <div class="inputBox">
+                            <input type="text" placeholder="full name">
+                            <input type="number" placeholder="phone">
+                        </div>
+
+                        <div class="inputBox">
+                            <input type="email" placeholder="your email">
+                            <select name="" id="">
+                                <option value="" disabled selected>make an appointment</option>
+                                <option value="09-11 am">09-11 am</option>
+                                <option value="11-03 pm">11-03 pm</option>
+                                <option value="03-06 pm">03-06 pm</option>
+                                <option value="06-09 pm">06-09 pm</option>
+                            </select>
+                        </div>
+
+                        <textarea name="" id="" cols="30" rows="10" placeholder="message ( optional )"></textarea>
+
+                        <input type="submit" name="" id="" value="make appointment" class="button">
+
+                    </form>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <!---------------- Appointment Section ENDS ---------------->
     <!-------------------- jquery cdn link  --------------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
