--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@
     <!---------------- Facility Section ENDS -------------->
     <!------------------- Appointment Section STARTS  -->
 
-    <section class="" id="appointment">
+    <section class="appointment" id="appointment">
 
         <div class="container min-vh-100">
 
             <div class="row justify-content-center">
 
-                <h1 class="heading"><span>'</span> make an appointment <span>'</span></h1>
+                <h1 class="heading"> make an appointment </h1>
 
                 <div class="col-md-10" data-aos="flip-down">
 
@@ -298,13 +298,13 @@
 
                         <div class="inputBox">
                             <input type="text" placeholder="full name">
-                            <input type="number" placeholder="phone">
+                            <input type="text" placeholder="phone">
                         </div>
 
                         <div class="inputBox">
                             <input type="email" placeholder="your email">
                             <select name="" id="">
-                                <option value="" disabled selected>make an appointment</option>
+                                <option value="" disabled selected>Select time</option>
                                 <option value="09-11 am">09-11 am</option>
                                 <option value="11-03 pm">11-03 pm</option>
                                 <option value="03-06 pm">03-06 pm</option>
