--- a/index.html
+++ b/index.html
@@ -380,6 +380,39 @@
         </div>
 
     </section>
+    <!-- Footer Section STARTS  -->
+
+    <section class="footer">
+
+        <div class="container">
+
+            <div class="socials d-flex align-items-center justify-content-evenly">
+
+                <div class="social ">
+                    <a href="">
+                        <p>Facebook</p>
+                    </a>
+                    <a class="ms-4" href=""> <img src="./images/fb.svg" alt=""></a>
+                </div>
+                <div class="social ">
+                    <a href="">
+                        <p>Instagram</p>
+                    </a>
+                    <a class="ms-4" href=""><img src="./images/instagram-square-brands.svg" alt=""></a>
+                </div>
+                <div class="social">
+                    <a href="">
+                        <p>Twitter</p>
+                    </a>
+                    <a class="ms-4" href=""> <img src="./images/twitter-brands.svg " alt=""></a>
+                </div>
+
+            </div>
+            <h6 class="text-center text-light mt-5 pt-5">Tasbiha Hussain | 2022</h6>
+        </div>
+    </section>
+
+    <!-- Footer Section ENDS -->
 
     <!---------------------- Blogs Section ENDS ------------------>
 
