--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
             <a href="#" class="logo">Ray of Hope</a>
 
+
+
+
+
             <nav class="nav">
                 <ul>
                     <li><a href="#home">home</a></li>
@@ -247,9 +251,9 @@
             <div class="box-container">
 
                 <div class="box" data-aos="fade-up">
-                    <i class="fas fa-hospital"></i>
-                    <span>120+</span>
-                    <h3>Hospitals</h3>
+                    <i class="fas fa-stethoscope"></i>
+                    <span>30+</span>
+                    <h3>Doctors</h3>
                 </div>
 
                 <div class="box" data-aos="fade-up">
@@ -259,20 +263,9 @@
                 </div>
 
                 <div class="box" data-aos="fade-up">
-                    <i class="fas fa-smile"></i>
-                    <span>1200+</span>
-                    <h3>happy patients</h3>
-                </div>
-
-                <div class="box" data-aos="fade-up">
-                    <i class="fas fa-procedures"></i>
-                    <span>130+</span>
-                    <h3>bed facility</h3>
-                </div>
-                <div class="box" data-aos="fade-up">
                     <i class="fas fa-clock"></i>
-                    <span>130+</span>
-                    <h3>bed facility</h3>
+                    <span>10+</span>
+                    <h3>years</h3>
                 </div>
 
             </div>
@@ -338,7 +331,7 @@
                 <div class="box" data-aos="fade-up">
                     <img src="images/Pleasant surprise-amico.png" alt="">
                     <div class="content">
-                        <span>jan 5, 2021</span>
+                        <span>jan 5, 2022</span>
                         <a href="#">
                             <h3>Let's be Happy</h3>
                         </a>
@@ -351,7 +344,7 @@
                 <div class="box" data-aos="fade-up">
                     <img src="images/Balloons-amico.png" alt="">
                     <div class="content">
-                        <span>jan 5, 2021</span>
+                        <span>jan 5, 2022</span>
                         <a href="#">
                             <h3>Let's talk depression</h3>
                         </a>
@@ -364,7 +357,7 @@
                 <div class="box" data-aos="fade-left">
                     <img src="images/Balloons-cuate.png" alt="">
                     <div class="content">
-                        <span>jan 5, 2021</span>
+                        <span>jan 5, 2022</span>
                         <a href="#">
                             <h3>conquer your mind</h3>
                         </a>
@@ -386,29 +379,25 @@
 
         <div class="container">
 
-            <div class="socials d-flex align-items-center justify-content-evenly">
-
-                <div class="social ">
-                    <a href="">
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="row">
+                    <div class="col-lg-4 col-md-12 col-sm-12 p-5">
                         <p>Facebook</p>
-                    </a>
-                    <a class="ms-4" href=""> <img src="./images/fb.svg" alt=""></a>
-                </div>
-                <div class="social ">
-                    <a href="">
+                        <a class="ms-4" href=""><img src="./images/fb.svg" alt=""></a>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-sm-12 p-5 ">
                         <p>Instagram</p>
-                    </a>
-                    <a class="ms-4" href=""><img src="./images/instagram-square-brands.svg" alt=""></a>
-                </div>
-                <div class="social">
-                    <a href="">
+                        <a class="ms-4" href=""><img src="./images/instagram-square-brands.svg" alt=""></a>
+                    </div>
+                    <div class="col-lg-4 col-md-12 col-sm-12 p-5">
                         <p>Twitter</p>
-                    </a>
-                    <a class="ms-4" href=""> <img src="./images/twitter-brands.svg " alt=""></a>
+                        <a class="ms-4" href=""><img src="./images/twitter-brands.svg" alt=""></a>
+                    </div>
                 </div>
-
             </div>
-            <h6 class="text-center text-light mt-5 pt-5">Tasbiha Hussain | 2022</h6>
+
+        </div> -->
+        <h6 class="text-center text-light mt-5 pt-5">Tasbiha Hussain | 2022</h6>
         </div>
     </section>
 
